# hermes-icm-memory

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  __init__.py  plugin.yaml  pyproject.toml
.github/workflows/: ci.yml
_bmad-output/implementation-artifacts/: 1-1-package-skeleton-and-entry-point.md  1-2-github-actions-ci-pipeline.md  1-3-readme-and-contributing.md  2-1-typed-errors-and-cli-runner.md  2-2-config-schema-and-path-resolution.md  2-3-trigger-detection-mapping.md  3-1-icm-memory-provider-class.md  3-2-wire-register-to-real-provider.md  4-1-hooks-and-bounded-queue-worker.md  4-2-llm-facing-tools.md  5-1-architectural-invariant-tests.md  5-2-profile-isolation-tests.md  5-3-failure-mode-degrade-matrix.md  5-4-integration-tests-real-icm.md  v0-1-1-default-shared-db-and-pi-fixes.md  v0-2-icm-serve-mcp-transport.md  v0-3-hermes-native-mcp-and-lifecycle-only-plugin.md
_bmad-output/planning-artifacts/: architecture.md  epics-and-stories.md  implementation-readiness.md  prd.md  product-brief.md  spec-v0-4-mcp-client.md  spec-v0.4-mcp-transport-and-fixed-detection.md
hermes_icm_memory/: __init__.py  _version.py  classifier.py  cli_runner.py  config.py  errors.py  hooks.py  mapping.py  mcp_client.py  provider.py  tools.py
tests/: conftest.py  test_ci_workflow.py  test_classifier.py  test_cli_only_transport.py  test_cli_runner.py  test_cli_runner_mcp.py  test_config.py  test_docs.py  test_errors_and_degrade.py  test_hooks.py  test_mapping.py  test_mcp_client.py  test_no_hardcoded_dotcache.py  test_no_network_calls.py  test_no_subprocess_outside_cli_runner.py  test_no_tool_surface.py  test_plugin_loader.py  test_profile_isolation.py  test_provider.py  test_tools.py
tests/integration/: conftest.py  test_real_icm_cross_tool.py  test_real_icm_recall.py  test_real_icm_serve.py  test_sync_turn_stress.py
