[project]
name = "hermes-icm-memory"
version = "0.1.0"
description = "Hermes Agent memory provider plugin backed by ICM (Infinite Context Memory) — semantic, cross-session, cross-editor recall via the local icm CLI."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Nikos Efthias" }]
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "coverage>=7.4",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-pyyaml",
]

[project.entry-points."hermes_agent.plugins"]
hermes-icm-memory = "hermes_icm_memory:register"

[project.urls]
Homepage = "https://github.com/ta3pks/hermes-icm-memory"
Repository = "https://github.com/ta3pks/hermes-icm-memory"
Issues = "https://github.com/ta3pks/hermes-icm-memory/issues"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["hermes_icm_memory*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=hermes_icm_memory --cov-branch --cov-fail-under=85"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]

[tool.mypy]
strict = true
python_version = "3.11"
files = ["hermes_icm_memory", "tests"]

[tool.coverage.run]
branch = true
source = ["hermes_icm_memory"]
